--- a/Week4-ML-Intro-Classification/Exercise-Logistic-Regression.ipynb
+++ b/Week4-ML-Intro-Classification/Exercise-Logistic-Regression.ipynb
@@ -725,7 +725,7 @@
    "outputs": [],
    "source": [
     "# Update your `selected_features` to include the new pclass and embarked features. \n",
-    "selected_features = ['pclass_2', 'pclass_3', 'embarked_Q', 'embarked_S']"
+    "selected_features = ['pclass_2', 'pclass_3', 'embarked_Q', 'embarked_S', 'sibsp', 'parch']"
    ]
   },
   {
@@ -759,10 +759,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy Score: 0.826816\n",
-      "Precision Score: 0.738462\n",
-      "Recall Score: 0.774194\n",
-      "F1 Score 0.755906\n"
+      "Accuracy Score: 0.737430\n",
+      "Precision Score: 0.659574\n",
+      "Recall Score: 0.500000\n",
+      "F1 Score 0.568807\n"
      ]
     },
     {
@@ -807,16 +807,16 @@
     "y_pred_2 = model_2.predict(X_test)\n",
     "\n",
     "# Calculate our accuracy\n",
-    "accuracy_2 = accuracy_score(y_test, y_pred)\n",
+    "accuracy_2 = accuracy_score(y_test, y_pred_2)\n",
     "\n",
     "# Calculate our precision score\n",
-    "precision_2 = precision_score(y_test, y_pred, 1)\n",
+    "precision_2 = precision_score(y_test, y_pred_2, 1)\n",
     "\n",
     "# Calculate our recall score\n",
-    "recall_2 = recall_score(y_test, y_pred, 1)\n",
+    "recall_2 = recall_score(y_test, y_pred_2, 1)\n",
     "\n",
     "# Calculate your f1-score\n",
-    "f1_2 = f1_score(y_test, y_pred, 1)\n",
+    "f1_2 = f1_score(y_test, y_pred_2, 1)\n",
     "\n",
     "# Print each of our scores to inspect performance.\n",
     "print(\"Accuracy Score: %f\" % accuracy_2)\n",
@@ -827,7 +827,7 @@
     "# Plot your confusion matrix.\n",
     "labels=['died', 'survived']\n",
     "cm = confusion_matrix(y_test, y_pred, labels=[0, 1])\n",
-    "tn, fp, fn, tp = confusion_matrix(y_test, y_pred, labels=[0, 1]).ravel()\n",
+    "tn, fp, fn, tp = confusion_matrix(y_test, y_pred_2, labels=[0, 1]).ravel()\n",
     "\n",
     "fig = plt.figure(figsize=(8,8))\n",
     "plt.xlabel('Predicted')\n",
